chore(blog): Update seed data blog content
Updates and additions to blog reference, troubleshooting, and tutorial content.